<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GetStartedActivity"
    android:background="@drawable/billie_eilish">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="39dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enjoy_listen"
        android:layout_width="264dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/enjoy_listen"
        android:layout_marginTop="383dp"
        android:textAppearance="@style/enjoy_listen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/description"
        android:layout_width="297dp"
        android:layout_height="92dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/description"
        android:layout_marginTop="534dp"
        android:textAppearance="@style/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="309dp"
        android:layout_height="72dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:background="@drawable/rectangle_2"
        android:text="@string/get_started"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:textSize="22sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>