<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="#0A000000"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/img_CallBack"
            android:onClick="CallBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:src="@drawable/arrow_back" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Sign in"
        android:textAppearance="@style/title_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/if_you_need"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginLeft="-45dp"
        android:layout_marginTop="22dp"
        android:gravity="top"
        android:text="@string/if_you_need"
        android:textAppearance="@style/if_you_need"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="22dp"
        android:text="@string/click_here"
        android:textAppearance="@style/click_here"
        app:layout_constraintStart_toEndOf="@+id/if_you_need"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="314dp"
        android:layout_height="80dp"
        android:layout_marginTop="246dp"
        android:alpha="0.2"
        android:background="@drawable/input_custom"
        android:hint="Enter Email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:padding="27dp"
        android:textColor="#000"
        android:textColorHint="@color/text_hint"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="314dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:alpha="0.2"
        android:background="@drawable/input_custom"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="27dp"
        android:textColor="#000"
        android:textColorHint="@color/text_hint"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />

    <TextView
        android:id="@+id/etforgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/click_here"
        android:textColor="#288ce9"
        app:layout_constraintStart_toStartOf="@+id/edt_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="309dp"
        android:layout_height="72dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/rectangle_2"
        android:text="Sign in"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="146dp"
        android:layout_height="1dp"
        android:layout_marginTop="39dp"
        android:src="@drawable/line_4"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="146dp"
        android:layout_height="1dp"
        android:layout_marginTop="39dp"
        android:src="@drawable/line_4"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="Or"
        android:textColor="#C6383838"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_gg"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_fb"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_gg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginLeft="65dp"
        android:text="Not A Member ?"
        android:textColor="#383838"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/btn_move_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="145dp"
        android:text="Register Now"
        android:textColor="#288ce9"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>